Sun Dec  1 08:27:28 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 66e5c39.  Notable changes:

	  Implement gem.deps.rb (Gemfile) .lock support

	  Fixed `gem uninstall` for a relative directory in GEM_HOME.

	* test/rubygems:  ditto.

Sun Dec  1 06:00:49 2013  Aman Gupta <ruby@tmm1.net>

	* test/ruby/test_gc.rb (test_gc_reason): Force minor GC by consuming
	  free slots to fix test.

Sat Nov 30 21:22:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_initialize): check unknown keywords.  [ruby-dev:47152]
	  [Bug #8060]

Sat Nov 30 18:05:38 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32ole/win32ole.c (hash2named_arg): correct declaration to fix
	  build failure.  a patch by phasis68 (Heesob Park) at
	  [ruby-core:58710].  [Bug #9184]

Sat Nov 30 17:46:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): determine exit status and signal to terminate
	  before finalization, to get rid of access destroyed T_DATA execption
	  object.  [ruby-core:58643] [Bug #9167]

Sat Nov 30 16:25:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (enumerator_with_index): should not store local variable
	  address to memoise the arguments.  it is invalidated after the return.
	  [ruby-core:58692] [Bug #9178]

Sat Nov 30 13:28:13 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* siphash.c (sip_hash24): fix for aligned word access little endian
	  platforms.  [ruby-core:58658] [Bug #9172]

Sat Nov 30 13:21:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_yield_block): implement non-nil block argument.

Fri Nov 29 20:59:39 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* vm_dump.c (rb_vmdebug_debug_print_pre): Bugfix. Get PC directly.
	  PC is cached into local stack and cfp->pc is incorrect at next of
	  branch or jump.
	* vm_exec.h (DEBUG_ENTER_INSN): catch up this change.
	* vm_core.h: update signature of rb_vmdebug_debug_print_pre.
