@@ -1,3 +1,7 @@
+Sun Dec  1 11:57:59 2013  Zachary Scott  <e@zzak.io>
+
+	* ext/openssl/lib/openssl/buffering.rb: Fix warning in copyright
+
 Sun Dec  1 08:27:28 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems:  Update to RubyGems master 66e5c39.  Notable changes:
